--- a/Testprojekt/App2/App2/index.html
+++ b/Testprojekt/App2/App2/index.html
@@ -40,6 +40,7 @@
 
         .word_cloud {
             background-color: black;
+            position: relative;
         }
 
         .spaceB {
@@ -86,10 +87,10 @@
 </head>
 <!-- NAVBAR
 ================================================== -->
-<body onload="load(); loadIkonographien(); interactions();">
+<body onload="load(); loadIkonographien(); interactions(); ">
 
     <!-- Wrap the rest of the page in another container to center all the content. -->
-
+     <div id="test">Wir wollen den swipe mit Reaktion testen</div>
     <div class="container">
         <div id="selectedIkono">
             <p class="clickedIkono text-right" id="ikono1"></p>
