reload word cloud nach auswahl wort

--- a/Testprojekt/App2/App2/index.html
+++ b/Testprojekt/App2/App2/index.html
@@ -43,6 +43,11 @@
             position: relative;
         }
 
+        .mystyle {
+            color: white;
+        }
+
+
         .spaceB {
             margin-bottom: 20px;
         }
@@ -99,7 +104,7 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
             <div id="feldname1" class="spaceB">
-                <canvas id="word_cloud" class="word_cloud center-block" width="1100" height="700"></canvas>
+                <canvas id="word_cloud" class="word_cloud center-block" width="1100" height="700" contenteditable="true"></canvas>
             </div>
             <div class="wf-container" id="pinterest"></div>
 
