--- a/Testprojekt/App2/App2/index.html
+++ b/Testprojekt/App2/App2/index.html
@@ -35,12 +35,18 @@
         }
 
         body {
-            background-color: black;
+            background-color: #0f0f0f;
         }
 
         .word_cloud {
-            background-color: black;
+            background-color: #0f0f0f;
             position: relative;
+        }
+
+        .clickedIkono {
+            font-size: 30px;
+            color: #565454;
+            font-weight: 400;
         }
 
         .mystyle {
